# turmite

./: .gitignore  CMakeLists.txt  README.md
cmake/: FindSDL2.cmake
include/: turmite.h
libft/: Makefile  ft_atoi.c  ft_atoidbl.c  ft_bzero.c  ft_countchiffres.c  ft_freetab.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isnb.c  ft_isprint.c  ft_itoa.c  ft_lstadd.c  ft_memalloc.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memdel.c  ft_memmove.c  ft_memset.c  ft_nbword.c  ft_print_tab.c  ft_printlst.c  ft_putchar.c  ft_putchar_fd.c  ft_putendl.c  ft_putendl_fd.c  ft_putnbr.c  ft_putnbr_fd.c  ft_putstr.c  ft_putstr_fd.c  ft_sqrt.c  ft_strcat.c  ft_strchr.c  ft_strclr.c  ft_strcmp.c  ft_strcpy.c  ft_strdel.c  (+27 more)
src/: edit_menu.c  error.c  init.c  main.c  print_map.c  render.c  turmite.c
